# sirius-headers-common

./: CMakeCache.txt  CMakeLists.txt  README.md  TelecommunicationVariables.h  build.ninja  cmake_install.cmake
ADC/: Channels.h
Accelerometer/: AccelerometerCANPacket.h  AccelerometerData.h  AccelerometerErrorStatus.h  AccelerometerPacket.h  AccelerometerStatus.h
Altimeter/: AltimeterData.h  AltimeterErrorStatus.h  AltimeterPacket.h  AltimeterStatus.h
Button/: ButtonErrorStatus.h  ButtonPacket.h  ButtonStatus.h
CAN/: CANHeader.h
CRC/: CRCConstants.h
DataBridge/: DataBridgeErrorStatus.h  DataBridgeStatus.h
Engine/: EngineCommand.h  EngineErrorStatus.h  EngineSDBuffers.h  EngineSensors.h  EngineState.h  EngineStatus.h
Ethernet/: DiagnosePacket.h  SyncPacket.h  UDPDeviceCtrlFlags.h  UDPFrame.h
FillStation/: FillStationErrorStatus.h  FillStationSensors.h  FillStationState.h
FillingStation/: FillingStationBuffers.h  FillingStationErrorStatus.h  FillingStationSensors.h  FillingStationState.h  FillingStationStatus.h
GPS/: GPSErrorStatus.h  GpsData.h  GpsPacket.h  GpsStatus.h
GSControl/: GSControlErrorStatus.h  GSControlSensors.h  GSControlState.h  GSControlStatus.h
Gyroscope/: GyroscopeData.h  GyroscopeErrorStatus.h  GyroscopePacket.h  GyroscopeStatus.h
Heater/: HeaterErrorStatus.h  HeaterPacket.h  HeaterStatus.h
Igniter/: IgniterErrorStatus.h  IgniterPacket.h  IgniterStatus.h
LoadCell/: LoadCellData.h  LoadCellErrorStatus.h  LoadCellPacket.h  LoadCellStatus.h
LowLevelDriver/: PWMStatus.h
LowLevelDriver/ADC/: ADCChannelErrorStatus.h  ADCChannelStatus.h  ADCErrorStatus.h  ADCStatus.h
LowLevelDriver/GPIO/: GPIOErrorStatus.h  GPIOStatus.h
LowLevelDriver/PWM/: PWMErrorStatus.h  PWMStatus.h
LowLevelDriver/SPI/: SPIErrorStatus.h  SPIStatus.h
LowLevelDriver/UART/: UARTErrorStatus.h  UARTStatus.h
LowLevelDriver/USB/: USBErrorStatus.h  USBStatus.h
Magnetometer/: MagnetometerData.h  MagnetometerErrorStatus.h  MagnetometerPacket.h  MagnetometerStatus.h
PressureSensor/: PressureSensorData.h  PressureSensorErrorStatus.h  PressureSensorPacket.h  PressureSensorStatus.h
Rocket/: RocketErrorStatus.h  RocketPacket.h  RocketStatus.h
Storage/: StorageErrorStatus.h  StoragePacket.h  StorageState.h  StorageStatus.h
Telecommunication/: BoardCommand.h  BoardCommandV2.h  CommandResponse.h  GSCommand.h  InterfaceField.h  PacketHeaderVariable.h  SystemPacket.h  TelecommunicationCommand.h  TelecommunicationErrorStatus.h  TelecommunicationHeader.h  TelecommunicationPacket.h  TelecommunicationState.h  TelecommunicationStatus.h  TelemetryHeader.h  TelemetryPacket.h
TemperatureSensor/: TemperatureSensorData.h  TemperatureSensorErrorStatus.h  TemperatureSensorPacket.h  TemperatureSensorStatus.h
TemperatureSensor/Thermistance/: ThermistanceData.h  ThermistanceErrorStatus.h  ThermistancePacket.h  ThermistanceStatus.h
TemperatureSensor/Thermocouple/: ThermocoupleData.h  ThermocoupleErrorStatus.h  ThermocouplePacket.h  ThermocoupleStatus.h
Thermocouple/: ThermocoupleData.h  ThermocouplePacket.h  ThermocoupleStatus.h
Valve/: ValveData.h  ValveErrorStatus.h  ValvePacket.h  ValveState.h  ValveStatus.h
