cmake_minimum_required(VERSION 3.28)

set(LibName common-headers)

add_library(${LibName} INTERFACE)

target_include_directories(${LibName} INTERFACE

${CMAKE_CURRENT_SOURCE_DIR}/Accelerometer
${CMAKE_CURRENT_SOURCE_DIR}/Altimeter
${CMAKE_CURRENT_SOURCE_DIR}/GPS
${CMAKE_CURRENT_SOURCE_DIR}/FillStation
${CMAKE_CURRENT_SOURCE_DIR}/Engine
${CMAKE_CURRENT_SOURCE_DIR}/GSControl
${CMAKE_CURRENT_SOURCE_DIR}/LowLevelDriver/ADC
${CMAKE_CURRENT_SOURCE_DIR}/LowLevelDriver/PWM
${CMAKE_CURRENT_SOURCE_DIR}/LowLevelDriver/GPIO
${CMAKE_CURRENT_SOURCE_DIR}/LowLevelDriver/UART
${CMAKE_CURRENT_SOURCE_DIR}/Gyroscope
${CMAKE_CURRENT_SOURCE_DIR}/Igniter
${CMAKE_CURRENT_SOURCE_DIR}/LoadCell
${CMAKE_CURRENT_SOURCE_DIR}/Magnetometer
${CMAKE_CURRENT_SOURCE_DIR}/PressureSensor
${CMAKE_CURRENT_SOURCE_DIR}/Rocket
${CMAKE_CURRENT_SOURCE_DIR}/Storage
${CMAKE_CURRENT_SOURCE_DIR}/Telecommunication
${CMAKE_CURRENT_SOURCE_DIR}/TemperatureSensor
${CMAKE_CURRENT_SOURCE_DIR}/Valve
)